# processador-arquivos

./: Dockerfile  README.md  converter.py  pyproject.toml
src/conversor/: main.py
