[project]
name = "processador-arquivos"
version = "0.1.0"
description = "Conversor de imagens para o trabalho da disciplina"
authors = [
    {name = "Pedro_Soares",email = "soares2000.ph@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=12.0.0,<13.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "typer (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"